# alpha-kurator

./: .env.example  .gitignore  CLAUDE.md  README.md  ableton-plugin-spec.md  backend-architecture.md  database-schema.md  docker-compose.yml  execution-plan.md  mobile-app-spec.md
ableton/: CMakeLists.txt  README.md
ableton/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
ableton/Source/Net/: BackendClient.cpp  BackendClient.h
api-contract/: openapi.yaml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: auth.py  config.py  db.py  main.py  models.py  schemas.py
backend/app/analyzer/: echo.py
backend/app/routers/: health.py  submissions.py
mobile/: App.tsx  README.md  app.json  package.json
mobile/src/api/: client.ts
mobile/src/screens/: CaptureScreen.tsx
mobile/src/storage/: token.ts
